# LEGAL

./: .replit  CLI_DOCS.md  README.md  app.py  clear_database.py  enhanced_patterns.py  ml_analyzer.py  models.py  nlp_analyzer.py  power_analysis.py  pyproject.toml  replit.md  requirements.txt  routes.py
attached_assets/: Pasted--1-Replace-Clause-Detection-with-Power-Structure-Analysis-Instead-of-just-asking-What-does-t-1750764893364_1750764893365.txt
instance/: tos_analyzer.db
static/css/: style.css
static/js/: analyzer.js  main.js
templates/: 404.html  500.html  base.html  compare.html  history.html  index.html  results.html
uploads/: .gitkeep
