[project]
name = "tos-analyzer"
version = "0.1.0"
description = "TOS Analyzer - Legal document risk assessment tool"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy",
    "pypdf2>=3.0.1",
    "scikit-learn",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
]
